--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: antiquewhite;
+  background-color: #f3f9fb;
 }
 
 code {
